[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/lvl_6_dialogs_titles/devLvl_6.gd" type="Script" id=1]
[ext_resource path="res://scenes/lvl_2_escenario/tierra.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/lvl_5_hud_signals/player_5.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/flappy-bird-assets-master/sprites/background-day.png" type="Texture" id=4]
[ext_resource path="res://scenes/lvl_6_dialogs_titles/hud_score_6.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 456, 480, 0, 0, 0, 0, -192, 480 )
}

[node name="Lvl_6" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 760.0 ],
"_edit_vertical_guides_": [ 288.0 ]
}

[node name="Background-day" type="Sprite" parent="."]
position = Vector2( 144, 256 )
texture = ExtResource( 4 )

[node name="PipeSpawner" type="Position2D" parent="."]
position = Vector2( 312, 232 )

[node name="Path2D" type="Path2D" parent="." groups=["world"]]
position = Vector2( 0, 0.724 )
curve = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( 456, 456 )
rotation = 3.14159
v_offset = -24.0
rotate = false

[node name="StaticBody2D2" parent="Path2D/PathFollow2D" instance=ExtResource( 2 )]
rotation = 3.14159

[node name="PathFollow2D2" type="PathFollow2D" parent="Path2D"]
position = Vector2( 143.296, 456 )
rotation = -3.14158
offset = 313.0
v_offset = -24.0
rotate = false

[node name="StaticBody2D2" parent="Path2D/PathFollow2D2" instance=ExtResource( 2 )]
rotation = 3.14159

[node name="Player_5" parent="." instance=ExtResource( 3 )]
position = Vector2( 91, 228 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="hud_score_6" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
